--- a/KRTT/res/layout/activity_main.xml
+++ b/KRTT/res/layout/activity_main.xml
@@ -5,24 +5,33 @@
         
      <LinearLayout
         android:id="@+id/menu"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#343434"
-        android:orientation="vertical" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Menu"
-            android:textSize="26sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Menu"
-            android:textSize="26sp" />
+        android:orientation="horizontal" 
+        android:weightSum="1"
+        android:background="#202020">
+        
+        <LinearLayout
+	        android:layout_width="0dip"
+	        android:layout_height="fill_parent"
+	        android:background="#343434"
+	        android:orientation="vertical" 
+	        android:layout_weight="0.3" >
+		
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:text="Menu"
+	            android:textSize="26sp" />
+	
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:text="Menu"
+	            android:textSize="26sp" />
+        </LinearLayout>
     </LinearLayout>
     
     
@@ -52,7 +61,7 @@
 		        android:layout_width="2dip"
 		        android:layout_height="fill_parent"
 		        android:layout_marginLeft="60dip"
-		        android:background="@layout/view_item_vertical_shadow" >
+		        android:background="@layout/listview_item_vertical_shadow" >
 		    </View>
 			
 	        <TextView
@@ -70,7 +79,7 @@
 	    <View
 	        android:layout_width="fill_parent"
 	        android:layout_height="3dip"
-	        android:background="@layout/view_item_horizontal_shadow" >
+	        android:background="@layout/listview_item_horizontal_shadow" >
 	    </View>
 	    
 	    
