--- a/KRTT/res/layout/activity_main.xml
+++ b/KRTT/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
         android:layout_height="fill_parent"
         android:orientation="horizontal" 
         android:weightSum="1"
-        android:background="#202020">
+        android:background="#dadada"
+        android:visibility="gone">
         
         <LinearLayout
 	        android:layout_width="0dip"
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical" 
-	        android:layout_weight="0.3" >
+	        android:layout_weight="0.3" 
+        	android:background="#202020">
 	        
            	<ImageView
 				android:layout_marginTop="12dip"
@@ -132,7 +134,7 @@
 	<LinearLayout
 	    android:id="@+id/app"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="fill_parent"
 	    android:orientation="vertical" 
 	    android:background="#dadada">
 	
@@ -149,14 +151,16 @@
 				android:layout_marginLeft="15dip"
 			    android:layout_alignParentLeft="true"
 	            android:layout_centerVertical="true"
-				android:background="@drawable/ic_menu" >  
+				android:background="@drawable/ic_menu" 
+        		android:visibility="gone">  
 			</ImageButton>
 			
 			<View
 		        android:layout_width="2dip"
 		        android:layout_height="fill_parent"
 		        android:layout_marginLeft="60dip"
-		        android:background="@layout/listview_item_vertical_shadow" >
+		        android:background="@layout/listview_item_vertical_shadow" 
+        		android:visibility="gone">
 		    </View>
 			
 	        <TextView
@@ -186,8 +190,10 @@
 	        android:layout_height="wrap_content" 
 	        android:divider="#dadada"
 	   		android:dividerHeight="3px"
-     		android:background="#FFF" 
-     		android:scrollbars="none">
+     		android:scrollbars="none"
+    		android:listSelector="@layout/listview_item_selector"
+    		android:background="@color/white"
+     		android:visibility="invisible">
 	    </ListView>
 	    
 	</LinearLayout>
