--- a/KRTT/res/layout/activity_splash.xml
+++ b/KRTT/res/layout/activity_splash.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/splash_bg">
     
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Splash"/>
+	<ImageView 
+	    android:layout_width="130dip"
+	    android:layout_height="40dip"
+	    android:src="@drawable/splash_ic_krtt"
+		android:layout_marginTop="90dip"
+        android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"/>
 
-</LinearLayout>
+	<ImageView 
+	    android:layout_width="110dip"
+	    android:layout_height="15dip"
+	    android:src="@drawable/splash_ic_passionpeople"
+	    android:layout_marginBottom="60dip"
+        android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"/>
+
+</RelativeLayout>
