--- a/KRTT/res/layout/activity_user_auth.xml
+++ b/KRTT/res/layout/activity_user_auth.xml
@@ -1,39 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    
-    <EditText
-        android:id="@+id/user_auth_email_txt"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="사용자 입력창"
-    />
+    android:background="@drawable/splash_bg" >
 
-    
-    <Button 
-        android:id="@+id/user_auth_email"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="300dip"
         android:layout_height="wrap_content"
-        android:text="인증번호발송"
-        />   
-        
-        
+        android:orientation="horizontal"
+		android:layout_marginTop="100dip"
+        android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"
+        android:weightSum="1" >
+
+         <EditText
+	        android:id="@+id/user_auth_email_txt"
+	        android:layout_width="0dip"
+	        android:layout_height="50dip"
+	        android:hint="Email을 입력해주세요" 
+	        android:layout_weight="0.7"/>
+	
+	    <Button
+	        android:id="@+id/user_auth_email"
+	        android:layout_width="0dip"
+	        android:layout_height="45dip"
+	        android:text="인증번호 발송" 
+	        android:textSize="15sp"
+	        android:layout_weight="0.25"
+	        android:layout_marginLeft="10dip"
+        	android:gravity="center_vertical" 
+	        android:background="@color/white"
+	        android:textColor="@color/click_dark_gray"
+	        android:alpha="0.6"/>
+	    
+    </LinearLayout>
+
+   
+
     <EditText
         android:id="@+id/user_auth_id_txt"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="인증번호입력"
-    />
+        android:layout_width="300dip"
+        android:layout_height="50dip"
+		android:layout_marginBottom="300dip"
+        android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
+        android:hint="인증번호를 입력해주세요" />
 
-    
-    <Button 
+    <Button
         android:id="@+id/user_auth_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="확인"
-    />
+        android:layout_width="290dip"
+        android:layout_height="50dip"
+		android:layout_marginBottom="240dip"
+        android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
+        android:text="인증하기"
+        android:textSize="20sp"
+        android:background="@color/white"
+        android:textColor="@color/click_dark_gray"
+        android:alpha="0.6" />
 
-</LinearLayout>
+</RelativeLayout>
