--- a/KRTT/res/layout/listview_footer_company.xml
+++ b/KRTT/res/layout/listview_footer_company.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="20dip"
         android:background="#fff"
         android:textColor="#555"
+        android:textSize="15sp"
         android:text="@string/footer_add_bs"/>
     
     
