--- a/KRTT/res/values/color.xml
+++ b/KRTT/res/values/color.xml
@@ -3,6 +3,8 @@
 	<color name="click_blue">#629dff</color>
 	<color name="click_dark_gray">#333</color>
 	<color name="click_medium_gray">#999</color>
+	<color name="click_medium_light_gray">#ccc</color>
 	<color name="click_light_gray">#eee</color>
 	<color name="white">#FFFFFF</color> 
+	<color name="black">#000000</color> 
 </resources> 
